--- a/index.html
+++ b/index.html
@@ -132,8 +132,11 @@
     </form>
 
     <div id="loading" style="display: none; text-align: center;">Loading...</div>
-
+    <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <script>
+        let tg = window.Telegram.WebApp;
+        tg.expand()
+        
         document.getElementById('chatForm').addEventListener('submit', async (e) => {
             e.preventDefault();
 
