--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
             height: 100vh; /* Полная высота экрана */
             display: flex;
             flex-direction: column;
-            justify-content: center; /* Вертикальное центрирование */
+            justify-content: flex-start; /* Вертикальное центрирование */
             align-items: center; /* Горизонтальное центрирование */
             text-align: center; /* Текст по центру */
+            padding-top: 20px; /* Добавляем отступ сверху */
         }
 
         h1 {
