--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
             width: 90%;
             max-width: 700px;
             max-height: 400px;
-            overflow-y: auto;
+            height: calc(100vh - 200px); /* Ограничиваем высоту контейнера */
+            overflow-y: auto; /* Включаем вертикальную прокрутку */
             background: #3c3c3c; /* Серый фон для контейнера */
             border-radius: 10px;
             padding: 20px;
