--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             align-items: center; /* Горизонтальное центрирование */
             text-align: center; /* Текст по центру */
             padding-top: 20px; /* Добавляем отступ сверху */
+            overflow: hidden; /* Отключаем вертикальную прокрутку */
         }
 
         h1 {
