--- a/index.html
+++ b/index.html
@@ -46,9 +46,14 @@
             padding: 20px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
             display: flex;
-            flex-direction: column;
+            flex-direction: column-reverse;
             gap: 10px; /* Отступ между сообщениями */
             margin-bottom: 20px;
+        }
+
+        /* Стили для полосы прокрутки */
+        #messages::-webkit-scrollbar {
+            width: 8px;
         }
 
         /* Сообщение пользователя */
@@ -139,50 +144,48 @@
     <script>
         let tg = window.Telegram.WebApp;
         tg.expand()
-        
         document.getElementById('chatForm').addEventListener('submit', async (e) => {
-            e.preventDefault();
+    e.preventDefault();
 
-            const input = document.getElementById('input').value.trim();
-            if (!input) return;
+    const input = document.getElementById('input').value.trim();
+    if (!input) return;
 
-            // Добавляем сообщение пользователя в интерфейс
-            const userMessage = `<div class="mess-user"><p>${input}</p></div>`;
-            document.getElementById('messages').innerHTML += userMessage;
+    // Добавляем сообщение пользователя в интерфейс
+    const userMessage = `<div class="mess-user"><p>${input}</p></div>`;
+    document.getElementById('messages').insertAdjacentHTML('afterbegin', userMessage);
 
-            // Показываем индикатор загрузки
-            document.getElementById('loading').style.display = 'block';
+    // Показываем индикатор загрузки
+    document.getElementById('loading').style.display = 'block';
 
-            try {
-                // Отправляем запрос на бэкенд
-                const response = await fetch('https://api.example.com/chat', { // Замените URL на ваш бэкенд
-                    method: 'POST',
-                    headers: {
-                        'Content-Type': 'application/json',
-                    },
-                    body: JSON.stringify({ message: input }), // Отправляем сообщение пользователя
-                });
-
-                if (!response.ok) {
-                    throw new Error(`Ошибка: ${response.status}`);
-                }
-
-                const data = await response.json();
-
-                // Отображаем ответ от системы
-                const systemMessage = `<div class="mess-chat"><p>${data.response}</p></div>`;
-                document.getElementById('messages').innerHTML += systemMessage;
-
-            } catch (error) {
-                console.error('Ошибка при отправке запроса:', error);
-                const errorMessage = `<div class="mess-chat"><p>Произошла ошибка. Попробуйте позже.</p></div>`;
-                document.getElementById('messages').innerHTML += errorMessage;
-            } finally {
-                // Скрываем индикатор загрузки и очищаем поле ввода
-                document.getElementById('loading').style.display = 'none';
-                document.getElementById('input').value = '';
-            }
+    try {
+        // Отправляем запрос на бэкенд
+        const response = await fetch('https://api.example.com/chat', { // Замените URL на ваш бэкенд
+            method: 'POST',
+            headers: {
+                'Content-Type': 'application/json',
+            },
+            body: JSON.stringify({ message: input }), // Отправляем сообщение пользователя
         });
-    </script>
+
+        if (!response.ok) {
+            throw new Error(`Ошибка: ${response.status}`);
+        }
+
+        const data = await response.json();
+
+        // Отображаем ответ от системы
+        const systemMessage = `<div class="mess-chat"><p>${data.response}</p></div>`;
+        document.getElementById('messages').insertAdjacentHTML('afterbegin', systemMessage);
+    } catch (error) {
+        console.error('Ошибка при отправке запроса:', error);
+        const errorMessage = `<div class="mess-chat"><p>Произошла ошибка. Попробуйте позже.</p></div>`;
+        document.getElementById('messages').insertAdjacentHTML('afterbegin', errorMessage);
+    } finally {
+        // Скрываем индикатор загрузки и очищаем поле ввода
+        document.getElementById('loading').style.display = 'none';
+        document.getElementById('input').value = '';
+    }
+});        
+</script>
 </body>
 </html>
