--- a/index.html
+++ b/index.html
@@ -39,10 +39,11 @@
             width: 90%;
             max-width: 700px;
             max-height: 400px;
-            height: calc(100vh - 200px); /* Ограничиваем высоту контейнера */
+            height: calc(100vh - 220px);
             overflow-y: auto; /* Включаем вертикальную прокрутку */
             background: #3c3c3c; /* Серый фон для контейнера */
             border-radius: 10px;
+            padding-bottom: 80px; /* Добавляем отступ снизу для формы */
             padding: 20px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
             display: flex;
