--- a/index.html
+++ b/index.html
@@ -183,18 +183,17 @@ form button:hover {
     }
 
     form {
-        bottom: 5px;
-        padding: 5px;
-        width: 100%; /* Полная ширина на маленьком экране */
+        width: 80%; /* Ещё более узкая форма */
+        bottom: 10px; /* Поднимаем форму */
     }
 
     form input {
-        font-size: 0.7rem;
-        padding: 5px;
+        padding: 6px; /* Минимальный отступ внутри поля */
+        font-size: 0.7rem; /* Шрифт ещё меньше */
     }
 
     form button {
-        padding: 6px 8px;
+        padding: 6px 10px; /* Компактная кнопка */
         font-size: 0.8rem;
     }
 }
