--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@ form button:hover {
 
     try {
         // Отправляем запрос на бэкенд
-        const response = await fetch('http://127.0.0.1:8000/chat', { // Замените URL на ваш бэкенд
+        const response = await fetch('https://localhost:8000/chat', { // Замените URL на ваш бэкенд
             method: 'POST',
             headers: {
                 'Content-Type': 'application/json',
