--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@ form button:hover {
 
     try {
         // Отправляем запрос на бэкенд
-        const response = await fetch('https://barely-stirring-stag.ngrok-free.app/chat', { // Замените URL на ваш бэкенд
+        const response = await fetch('https://sawfish-polite-naturally.ngrok-free.app/chat', { // Замените URL на ваш бэкенд
             method: 'POST',
             headers: {
                 'Content-Type': 'application/json',
