--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@ form button:hover {
     <div id="messages"></div>
 
     <form id="chatForm">
-        <input type="text" id="input" placeholder="Enter your message">
+        <textarea type="text" id="input" placeholder="Enter your message">
         <button type="submit" id="sendButton">Send</button>
     </form>
 
