--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ form {
 }
 
 /* Поле ввода */
-form input {
+form textarea {
     background: #40414F;
     border-radius: 8px;
     padding: 10px;
