--- a/index.html
+++ b/index.html
@@ -103,7 +103,10 @@ form textarea {
     width: 100%;
     font-size: 0.9rem;
     outline: none;
+    resize: none; /* Убирает возможность изменения размера */
+    height: 50px; /* Начальная высота */
 }
+
 
 /* Кнопка отправки */
 form button {
