--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ form {
 }
 
 /* Поле ввода */
-form textarea {
+form input {
     background: #40414F;
     border-radius: 8px;
     padding: 10px;
@@ -210,7 +210,7 @@ form button:hover {
     <div id="messages"></div>
 
     <form id="chatForm">
-        <textarea type="text" id="input" placeholder="Enter your message">
+        <input type="text" id="input" placeholder="Enter your message">
         <button type="submit" id="sendButton">Send</button>
     </form>
 
