--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@ form button:hover {
 
     try {
         // Отправляем запрос на бэкенд
-        const response = await fetch('https://e928-37-169-175-154.ngrok-free.app/chat', { // Замените URL на ваш бэкенд
+        const response = await fetch('https://b550-37-169-175-154.ngrok-free.app/chat', { // Замените URL на ваш бэкенд
             method: 'POST',
             headers: {
                 'Content-Type': 'application/json',
