--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@ form button:hover {
 
     try {
         // Отправляем запрос на бэкенд
-        const response = await fetch('https://2015-89-85-196-28.ngrok-free.app/chat', { // Замените URL на ваш бэкенд
+        const response = await fetch('https://60f7-37-166-143-35.ngrok-free.app/chat', { // Замените URL на ваш бэкенд
             method: 'POST',
             headers: {
                 'Content-Type': 'application/json',
