--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ form {
 }
 
 /* Поле ввода */
-form input {
+form textarea {
     background: #40414F;
     border-radius: 8px;
     padding: 10px;
@@ -105,6 +105,8 @@ form input {
     outline: none;
     resize: none; /* Убирает возможность изменения размера */
     height: 50px; /* Начальная высота */
+    overflow-y: auto; /* Добавляет прокрутку при превышении высоты */
+    line-height: 1.5;
 }
 
 
@@ -210,7 +212,7 @@ form button:hover {
     <div id="messages"></div>
 
     <form id="chatForm">
-        <input type="text" id="input" placeholder="Enter your message">
+        <textarea type="text" id="input" placeholder="Enter your message">
         <button type="submit" id="sendButton">Send</button>
     </form>
 
