--- a/index.html
+++ b/index.html
@@ -212,9 +212,10 @@ form button:hover {
     <div id="messages"></div>
 
     <form id="chatForm">
-        <textarea type="text" id="input" placeholder="Enter your message">
+        <textarea id="input" placeholder="Enter your message"></textarea>
         <button type="submit" id="sendButton">Send</button>
     </form>
+
 
     <div id="loading" style="display: none; text-align: center;">Loading...</div>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
