--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@ form button:hover {
     <div id="messages"></div>
 
     <form id="chatForm">
-        <textarea id="input" placeholder="Enter your message"></textarea>
+        <div id="input" contenteditable="true" data-placeholder="Enter your message"></div>
         <button type="submit" id="sendButton">Send</button>
     </form>
 
