--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ form {
 }
 
 /* Поле ввода */
-form textarea {
+form input {
     background: #40414F;
     border-radius: 8px;
     padding: 10px;
@@ -105,9 +105,8 @@ form textarea {
     outline: none;
     resize: none; /* Убирает возможность изменения размера */
     height: 50px; /* Начальная высота */
-    overflow-y: auto; /* Добавляет прокрутку при превышении высоты */
-    line-height: 1.5;
 }
+
 
 
 /* Кнопка отправки */
