--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@ form button:hover {
     <div id="messages"></div>
 
     <form id="chatForm">
-        <div id="input" contenteditable="true" data-placeholder="Enter your message"></div>
+        <input type="text" id="input" placeholder="Enter your message">
         <button type="submit" id="sendButton">Send</button>
     </form>
 
