--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@ form button:hover {
 
     try {
         // Отправляем запрос на бэкенд
-        const response = await fetch('https://60f7-37-166-143-35.ngrok-free.app/chat', { // Замените URL на ваш бэкенд
+        const response = await fetch('https://1753-78-244-154-224.ngrok-free.app/chat', { // Замените URL на ваш бэкенд
             method: 'POST',
             headers: {
                 'Content-Type': 'application/json',
